the flexibility of libtbx.option_parser brought to the looping over space-groups

--- a/.gitattributes
+++ b/.gitattributes
@@ -325,3 +325,4 @@ smtbx/refinement/tests/__init__.py -text
 smtbx/refinement/tests/tst_minimization.py -text
 smtbx/refinement/tests/tst_minimization_at_random.py -text
 smtbx/run_tests.py -text
+smtbx/util.py -text
