--- a/.gitattributes
+++ b/.gitattributes
@@ -164,6 +164,7 @@ mmtbx/mmtbx/chemical_components/tst.py -text
 mmtbx/mmtbx/command_line/cbetadev.py -text
 mmtbx/mmtbx/command_line/cif_as_mtz.py -text
 mmtbx/mmtbx/command_line/maps.py -text
+mmtbx/mmtbx/command_line/model_vs_data.py -text
 mmtbx/mmtbx/command_line/pdb_atom_selection.py svneol=native#text/x-python
 mmtbx/mmtbx/command_line/pdbtools.py -text
 mmtbx/mmtbx/command_line/ramalyze.py -text
@@ -175,6 +176,7 @@ mmtbx/mmtbx/ias/__init__.py -text
 mmtbx/mmtbx/ias/tst_ias.py -text
 mmtbx/mmtbx/maps.py -text
 mmtbx/mmtbx/model_statistics.py -text
+mmtbx/mmtbx/model_vs_data.py -text
 mmtbx/mmtbx/monomer_library/apply_mod_rna.py svneol=native#text/x-python
 mmtbx/mmtbx/monomer_library/mod_rnaC2.cif -text
 mmtbx/mmtbx/monomer_library/mod_rnaC3.cif -text
