scitbx.math.inertia_tensor (with pivot parameter) factored out of principal_axes_of_inertia

--- a/.gitattributes
+++ b/.gitattributes
@@ -269,6 +269,7 @@ scitbx/include/scitbx/boost_python/cstringio_utils.h svneol=native#text/plain
 scitbx/include/scitbx/error_utils.h -text
 scitbx/include/scitbx/iso_surface.h -text
 scitbx/include/scitbx/math/euler_angles.h -text
+scitbx/include/scitbx/math/inertia_tensor.h svneol=native#text/plain
 scitbx/include/scitbx/math/superpose.h -text
 scitbx/include/scitbx/matrix/delta_tensors.h -text
 scitbx/include/scitbx/misc/positive_getitem_index.h svneol=native#text/plain
