--- a/.gitattributes
+++ b/.gitattributes
@@ -263,43 +263,43 @@ scitbx/array_family/boost_python/tst_flex_argument_passing.py -text
 scitbx/array_family/boost_python/tst_smart_selection.py svneol=native#text/x-python
 scitbx/array_family/tst_unsigned_float_arithmetic.cpp -text
 scitbx/boost_python/cstringio_utils.h svneol=native#text/plain
+scitbx/command_line/generate_error_h.py -text
 scitbx/error/SConscript -text
 scitbx/error/tst_error.cpp -text
 scitbx/error/tst_error.py -text
 scitbx/error_utils.h -text
+scitbx/examples/principal_axes_of_inertia.py svneol=native#text/x-python
+scitbx/graph/__init__.py -text
+scitbx/graph/rigidity.py -text
+scitbx/graph/rigidity_matrix_symbolic.py svneol=native#text/x-python
+scitbx/graph/tst_rigidity.py -text
 scitbx/iso_surface.h -text
+scitbx/iso_surface/SConscript -text
+scitbx/iso_surface/__init__.py -text
+scitbx/iso_surface/iso_surface_ext.cpp -text
+scitbx/iso_surface/tst_iso_surface.m -text
+scitbx/iso_surface/tst_iso_surface.py -text
+scitbx/math/besselk.py -text
 scitbx/math/boost_python/least_squares_plane.cpp -text
 scitbx/math/boost_python/tst_least_squares_plane.py -text
 scitbx/math/euler_angles.h -text
 scitbx/math/inertia_tensor.h svneol=native#text/plain
 scitbx/math/least_squares_plane.h -text
+scitbx/math/sphere_sphere_intersection.py svneol=native#text/x-python
 scitbx/math/superpose.h -text
 scitbx/matrix/delta_tensors.h -text
 scitbx/misc/positive_getitem_index.h svneol=native#text/plain
-scitbx/scitbx/command_line/generate_error_h.py -text
-scitbx/scitbx/examples/principal_axes_of_inertia.py svneol=native#text/x-python
-scitbx/scitbx/graph/__init__.py -text
-scitbx/scitbx/graph/rigidity.py -text
-scitbx/scitbx/graph/rigidity_matrix_symbolic.py svneol=native#text/x-python
-scitbx/scitbx/graph/tst_rigidity.py -text
-scitbx/scitbx/iso_surface/SConscript -text
-scitbx/scitbx/iso_surface/__init__.py -text
-scitbx/scitbx/iso_surface/iso_surface_ext.cpp -text
-scitbx/scitbx/iso_surface/tst_iso_surface.m -text
-scitbx/scitbx/iso_surface/tst_iso_surface.py -text
-scitbx/scitbx/math/besselk.py -text
-scitbx/scitbx/math/sphere_sphere_intersection.py svneol=native#text/x-python
-scitbx/scitbx/source_generators/flex_fwd_h.py -text
-scitbx/scitbx/sparse/__init__.py -text
-scitbx/scitbx/sparse/boost_python/SConscript -text
-scitbx/scitbx/sparse/boost_python/matrix.cpp -text
-scitbx/scitbx/sparse/boost_python/sparse_ext.cpp -text
-scitbx/scitbx/sparse/boost_python/vector.cpp -text
-scitbx/scitbx/sparse/tests/tst_sparse.py -text
+scitbx/source_generators/flex_fwd_h.py -text
+scitbx/sparse/__init__.py -text
+scitbx/sparse/boost_python/SConscript -text
+scitbx/sparse/boost_python/matrix.cpp -text
+scitbx/sparse/boost_python/sparse_ext.cpp -text
+scitbx/sparse/boost_python/vector.cpp -text
 scitbx/sparse/dfs.h -text
 scitbx/sparse/io.h -text
 scitbx/sparse/lu_factorization.h -text
 scitbx/sparse/matrix.h -text
+scitbx/sparse/tests/tst_sparse.py -text
 scitbx/sparse/vector.h -text
 scitbx/stl/vector_io.h -text
 smtbx/SConscript -text
