directory structure simplification: content of iotbx/include moved two levels up

--- a/.gitattributes
+++ b/.gitattributes
@@ -70,33 +70,6 @@ fftw3tbx/tst_ext.py svneol=native#text/x-python
 gltbx/wx_controllers.py -text
 gltbx/wx_viewer_example.py -text
 gltbx/wx_viewers_images.py -text
-iotbx/include/iotbx/pdb/atom_selection.cpp svneol=native#text/plain
-iotbx/include/iotbx/pdb/construct_hierarchy.cpp svneol=native#text/plain
-iotbx/include/iotbx/pdb/hierarchy.cpp svneol=native#text/plain
-iotbx/include/iotbx/pdb/hierarchy.h svneol=native#text/plain
-iotbx/include/iotbx/pdb/hierarchy_atom_bpl.cpp svneol=native#text/plain
-iotbx/include/iotbx/pdb/hierarchy_atoms.cpp svneol=native#text/plain
-iotbx/include/iotbx/pdb/hierarchy_atoms.h svneol=native#text/plain
-iotbx/include/iotbx/pdb/hierarchy_atoms_bpl.cpp svneol=native#text/plain
-iotbx/include/iotbx/pdb/hierarchy_bpl.h svneol=native#text/plain
-iotbx/include/iotbx/pdb/hierarchy_ext.cpp svneol=native#text/plain
-iotbx/include/iotbx/pdb/hierarchy_select.cpp svneol=native#text/plain
-iotbx/include/iotbx/pdb/hierarchy_write.cpp svneol=native#text/plain
-iotbx/include/iotbx/pdb/hybrid_36_cpp.cpp svneol=native#text/plain
-iotbx/include/iotbx/pdb/hybrid_36_cpp.h svneol=native#text/plain
-iotbx/include/iotbx/pdb/input.cpp svneol=native#text/plain
-iotbx/include/iotbx/pdb/input_write.cpp svneol=native#text/plain
-iotbx/include/iotbx/pdb/namespace.h svneol=native#text/plain
-iotbx/include/iotbx/pdb/overall_counts.cpp svneol=native#text/plain
-iotbx/include/iotbx/pdb/rna_dna_atom_names.h -text
-iotbx/include/iotbx/pdb/rna_dna_atom_names_bpl.cpp -text
-iotbx/include/iotbx/pdb/tst_hierarchy.py svneol=native#text/x-python
-iotbx/include/iotbx/pdb/tst_rna_dna_atom_names.py -text
-iotbx/include/iotbx/pdb/utils.cpp svneol=native#text/plain
-iotbx/include/iotbx/pdb/utils.h svneol=native#text/plain
-iotbx/include/iotbx/pdb/write_utils.cpp svneol=native#text/plain
-iotbx/include/iotbx/pdb/write_utils.h svneol=native#text/plain
-iotbx/include/iotbx/pdb/write_utils_bpl.h svneol=native#text/plain
 iotbx/iotbx/cns/crystal_symmetry_utils.py svneol=native#text/x-python
 iotbx/iotbx/command_line/pdb.b_factor_stats.py svneol=native#text/x-python
 iotbx/iotbx/command_line/pdb.join_fragment_files.py svneol=native#text/x-python
@@ -131,6 +104,33 @@ iotbx/iotbx/shelx/fcf.py -text
 iotbx/iotbx/shelx/lexer.py -text
 iotbx/iotbx/shelx/parsers.py -text
 iotbx/iotbx/shelx/tst_read_ins.py -text
+iotbx/pdb/atom_selection.cpp svneol=native#text/plain
+iotbx/pdb/construct_hierarchy.cpp svneol=native#text/plain
+iotbx/pdb/hierarchy.cpp svneol=native#text/plain
+iotbx/pdb/hierarchy.h svneol=native#text/plain
+iotbx/pdb/hierarchy_atom_bpl.cpp svneol=native#text/plain
+iotbx/pdb/hierarchy_atoms.cpp svneol=native#text/plain
+iotbx/pdb/hierarchy_atoms.h svneol=native#text/plain
+iotbx/pdb/hierarchy_atoms_bpl.cpp svneol=native#text/plain
+iotbx/pdb/hierarchy_bpl.h svneol=native#text/plain
+iotbx/pdb/hierarchy_ext.cpp svneol=native#text/plain
+iotbx/pdb/hierarchy_select.cpp svneol=native#text/plain
+iotbx/pdb/hierarchy_write.cpp svneol=native#text/plain
+iotbx/pdb/hybrid_36_cpp.cpp svneol=native#text/plain
+iotbx/pdb/hybrid_36_cpp.h svneol=native#text/plain
+iotbx/pdb/input.cpp svneol=native#text/plain
+iotbx/pdb/input_write.cpp svneol=native#text/plain
+iotbx/pdb/namespace.h svneol=native#text/plain
+iotbx/pdb/overall_counts.cpp svneol=native#text/plain
+iotbx/pdb/rna_dna_atom_names.h -text
+iotbx/pdb/rna_dna_atom_names_bpl.cpp -text
+iotbx/pdb/tst_hierarchy.py svneol=native#text/x-python
+iotbx/pdb/tst_rna_dna_atom_names.py -text
+iotbx/pdb/utils.cpp svneol=native#text/plain
+iotbx/pdb/utils.h svneol=native#text/plain
+iotbx/pdb/write_utils.cpp svneol=native#text/plain
+iotbx/pdb/write_utils.h svneol=native#text/plain
+iotbx/pdb/write_utils_bpl.h svneol=native#text/plain
 libtbx/libtbx/assert_utils.py -text
 libtbx/libtbx/command_line/assert_line_count.py svneol=native#text/x-python
 libtbx/libtbx/command_line/bash.sh -text
