--- a/iotbx/SConscript
+++ b/iotbx/SConscript
@@ -3,7 +3,7 @@ import os
 Import("env_base", "env_etc")
 
 env_etc.iotbx_dist = libtbx.env.dist_path("iotbx")
-env_etc.iotbx_include = os.path.dirname(os.path.join(env_etc.iotbx_dist))
+env_etc.iotbx_include = os.path.dirname(env_etc.iotbx_dist)
 
 env_etc.iotbx_common_includes = [
   env_etc.libtbx_include,
