--- a/libtbx/SConscript
+++ b/libtbx/SConscript
@@ -21,7 +21,16 @@ if (1):
   SCons.Action.FunctionAction.get_contents = \
   SCons_Action_FunctionAction_get_contents
 
-class empty: pass
+class empty:
+
+  def __init__(self):
+    open(libtbx.env.under_build("include_paths"), "w")
+
+  def __setattr__(self, key, value):
+    self.__dict__.__setitem__(key, value)
+    if (key.endswith("_common_includes")):
+      print >> open(libtbx.env.under_build("include_paths"), "a"), \
+        key, ":".join(value)
 
 def set_python_include_and_libs(env_etc):
   env_etc.python_include = libtbx.env_config.python_include_path()
