--- a/.gitattributes
+++ b/.gitattributes
@@ -46,7 +46,9 @@ cctbx/sgtbx/show_cosets.py -text
 cctbx/source_generators/flex_fwd_h.py -text
 cctbx/uctbx/boost_python/tst_crystal_orientation.py -text
 cctbx/uctbx/crystal_orientation.cpp -text
+cctbx/xray/boost_python/grouped_data.cpp -text
 cctbx/xray/boost_python/raw_multithreading/structure_factors_direct.cpp -text
+cctbx/xray/grouped_data.h -text
 cctbx/xray/raw_multithreading/structure_factors_direct.h -text
 cctbx/xray/weighting_schemes.py -text
 compcomm/newsletter08/default.css -text
