--- a/.gitattributes
+++ b/.gitattributes
@@ -37,6 +37,7 @@ cctbx/regression/random_generator_state.pickle -text
 cctbx/regression/structure_ideal.pickle -text
 cctbx/regression/structure_start.pickle -text
 cctbx/regression/tst_adp_constraints_cartesian.py -text
+cctbx/regression/tst_grouped_data.py -text
 cctbx/regression/tst_show_cosets.py -text
 cctbx/regression/tst_structure_factors_multithread.py -text
 cctbx/regression/tst_weighting_schemes.py -text
