bug fix: cctbx/xray/boost_python/SConscript: missing grouped_data.cpp added

--- a/cctbx/xray/boost_python/SConscript
+++ b/cctbx/xray/boost_python/SConscript
@@ -20,6 +20,7 @@ sources = [
   "targets.cpp",
   "f_model_bpl.cpp",
   "twin_targets.cpp",
+  "grouped_data.cpp",
 ]
 
 raw_multithreaded_sources = [
