--- a/.gitattributes
+++ b/.gitattributes
@@ -289,6 +289,7 @@ scitbx/error/tst_error.cpp -text
 scitbx/error/tst_error.py -text
 scitbx/error_utils.h -text
 scitbx/examples/principal_axes_of_inertia.py svneol=native#text/x-python
+scitbx/examples/rigid_body_refinement_core.py svneol=native#text/x-python
 scitbx/graph/__init__.py -text
 scitbx/graph/rigidity.py -text
 scitbx/graph/rigidity_matrix_symbolic.py svneol=native#text/x-python
