new iotbx.cif.xray_structure, used via cctbx.xray.structure.as_cif_simple(); unused cctbx.xray.scatterer.u_eq() renamed to .u_iso_or_equiv() and replaced with body of flex.xray_scatterer.extract_u_iso_or_u_equiv(), but return 0 instead of -1 if neither use_u_iso nor use_u_aniso

--- a/.gitattributes
+++ b/.gitattributes
@@ -90,6 +90,9 @@ fftw3tbx/tst_ext.py svneol=native#text/x-python
 gltbx/wx_controllers.py -text
 gltbx/wx_viewer_example.py -text
 gltbx/wx_viewers_images.py -text
+iotbx/cif/__init__.py svneol=native#text/x-python
+iotbx/cif/tst_xray_structure.py svneol=native#text/x-python
+iotbx/cif/xray_structure.py svneol=native#text/x-python
 iotbx/cns/crystal_symmetry_utils.py svneol=native#text/x-python
 iotbx/command_line/pdb.b_factor_stats.py svneol=native#text/x-python
 iotbx/command_line/pdb.join_fragment_files.py svneol=native#text/x-python
