--- a/libtbx/SConscript
+++ b/libtbx/SConscript
@@ -526,7 +526,7 @@ else:
         % libtbx.env.dist_path("boost"))
     if not libtbx.env.build_options.enable_boost_threads:
       env_etc.cxxflags_base.append("-DBOOST_DISABLE_THREADS")
-    env_etc.ccflags_base = []
+    env_etc.ccflags_base = ["-woff", "1035"]
     if (libtbx.env.build_options.optimization):
       opts = ["-DNDEBUG", "-O2", "-OPT:Olimit=0"]
     else:
