- introduce accumulators to separate the computation of statistics from the iteration over the sequences - rewrite scitbx::math::basic_statistics and cctbx::maptbx::statistics with them

--- a/.gitattributes
+++ b/.gitattributes
@@ -311,6 +311,7 @@ scitbx/iso_surface/__init__.py -text
 scitbx/iso_surface/iso_surface_ext.cpp -text
 scitbx/iso_surface/tst_iso_surface.m -text
 scitbx/iso_surface/tst_iso_surface.py -text
+scitbx/math/accumulators.h -text
 scitbx/math/besselk.py -text
 scitbx/math/boost_python/least_squares_plane.cpp -text
 scitbx/math/boost_python/tst_least_squares_plane.py -text
