gltbx.viewer -> gltbx.viewer_utils; gltbx.try_imports: include viewer_utils

--- a/gltbx/SConscript
+++ b/gltbx/SConscript
@@ -49,8 +49,8 @@ if (not env_etc.no_boost_python):
       target="#lib/gltbx_util_ext",
       source=["util_ext.cpp"])
     env.SharedLibrary(
-      target="#lib/gltbx_viewer_ext",
-      source=["viewer_ext.cpp"])
+      target="#lib/gltbx_viewer_utils_ext",
+      source=["viewer_utils_ext.cpp"])
     env.SharedLibrary(
       target="#lib/gltbx_fonts_ext",
       source=[
