new iotbx.ccp4_map module (just the basic framework)

--- a/.gitattributes
+++ b/.gitattributes
@@ -94,6 +94,9 @@ gltbx/viewer_utils_ext.cpp svneol=native#text/plain
 gltbx/wx_controllers.py -text
 gltbx/wx_viewer_example.py -text
 gltbx/wx_viewers_images.py -text
+iotbx/ccp4_map/SConscript -text
+iotbx/ccp4_map/__init__.py svneol=native#text/x-python
+iotbx/ccp4_map/ext.cpp svneol=native#text/plain
 iotbx/cif/__init__.py svneol=native#text/x-python
 iotbx/cif/tst_xray_structure.py svneol=native#text/x-python
 iotbx/cif/xray_structure.py svneol=native#text/x-python
