--- a/iotbx/SConscript
+++ b/iotbx/SConscript
@@ -45,6 +45,7 @@ if (not env_etc.no_boost_python):
     source=["wildcard_ext.cpp"])
 
 SConscript("mtz/SConscript")
+SConscript("ccp4_map/SConscript")
 
 if (not env_etc.no_boost_python):
   SConscript("detectors/SConscript")
