Medley of numerical and crystallographic literature that I found useful.

--- a/.gitattributes
+++ b/.gitattributes
@@ -68,6 +68,7 @@ crys3d/__init__.py -text
 crys3d/images.py -text
 crys3d/wx_extra.py -text
 crys3d/wx_map_viewer.py -text
+dox/references.bib -text
 dox/rst/python_cpp_mix.png -text
 dox/sbgrid2008_update_generated_files.csh -text
 dox/siena2005/cctbx_central_types.pdf -text svneol=unset#application/pdf
